--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ In this report, I want to analyze the trend of items checked out in the Seattle 
 
 ### Summary Information
 
-Items with most checkouts in Seattle public library from 2017 to 2023 are *In Building Device Checkout* in 2017, *FlexTech–Laptops* in 2018, *FlexTech–Laptops* in 2019, *So You Want to Talk about Race (Unabridged)* in 2020, *The Vanishing Half: A Novel* in 2021, *The House of Broken Angels* in 2022, *Headphones / Seattle Public Library* in 2023. There are total 354296 items defined as digital items from 2017 to 2023. There are total 462058 items defined as physical items from 2017 to 2023. The number of distinct checkouts from 2017 to 2023 respectively are 36826, 31885, 32262, 25280, 28966, 28922, 12700. The month with most checkouts respectively from 2017 to 2023 are August, January, January, January, August, August, and January. There are 32 material types of checked out items.  
+Items with most checkouts in Seattle public library from 2017 to 2023 are *In Building Device Checkout* in 2017, *FlexTech–Laptops* in 2018, *FlexTech–Laptops* in 2019, *So You Want to Talk about Race (Unabridged)* in 2020, *The Vanishing Half: A Novel* in 2021, *The House of Broken Angels* in 2022, *Headphones / Seattle Public Library* in 2023. The number of distinct checkouts from 2017 to 2023 respectively are 36826, 31885, 32262, 25280, 28966, 28922, 12700. The month with most checkouts respectively from 2017 to 2023 are August, January, January, January, August, August, and January. There are 32 material types of checked out items. From 2017 to 2023, eBooks with the most checkouts respectively are *The Girl on the Train: A Novel*, *Crazy Rich Asians: Crazy Rich Asians Series, Book 1*, *After the Flood: A Novel*, *White Fragility: Why It's So Hard for White People to Talk About Racism*, *The Vanishing Half: A Novel*, *The House of Broken Angels*, *Lessons in Chemistry: A Novel*. 
 
 ### The Dataset
 
